fixed renting service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Ustawienia aplikacji
-spring.application.name=smart_ski_rent_ver2
+spring.application.name=smart_bike_rent
 server.port=${PORT:8080}
 
 # Aktywacja profilu produkcyjnego
-#spring.profiles.active=dev
+spring.profiles.active=dev
 
 # Ustawienia bazy danych
-spring.datasource.url=${JAWSDB_URL:jdbc:mysql://localhost:3306/smart_ski_rent3}
+spring.datasource.url=${JAWSDB_URL:jdbc:mysql://localhost:3306/smart_bike_rent}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Inne ustawienia JPA
