Prepare for deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.application.name=smart_bike_rent
 server.port=${PORT:8080}
 
-# Aktywacja profilu produkcyjnego
-spring.profiles.active=dev
+# Aktywacja profilu developerskiego
+#spring.profiles.active=dev
 
 # Ustawienia bazy danych
 spring.datasource.url=${JAWSDB_URL:jdbc:mysql://localhost:3306/smart_bike_rent}
@@ -11,9 +11,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Inne ustawienia JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=false
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 # Ustawienia logowania i bezpiecze?stwa
 logging.level.org.springframework.security=DEBUG
