prepare to deploy2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Inne ustawienia JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=false
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 
