--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=smart_bike_rent
 server.port=${PORT:8080}
 
 # Aktywacja profilu developerskiego
-#spring.profiles.active=dev
+spring.profiles.active=dev
 
 # Ustawienia bazy danych
 spring.datasource.url=${JAWSDB_URL:jdbc:mysql://localhost:3306/smart_bike_rent}
